--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,2 +1,15 @@
-<%= link_to 'Strona główna', root_path %>
-<%= link_to 'O firmie', home_about_path %>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container">
+    <div class="navbar-header">
+      <%= link_to 'OFFERBUD', root_path, class: 'navbar-brand' %>
+    </div>
+  
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to 'Strona główna', root_path %></li>
+        <li><%= link_to 'O firmie', home_about_path %></li>
+    </ul>
+  </div>
+  
+</div>
+</nav>
