--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,6 +1,7 @@
-<h1>O firmie</h1>
-<p>Platforma ofertowa dla firm budowlanych</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit dapibus dignissim. 
+<div class="jumbotron">
+    <h1>O firmie</h1>
+    <p>Platforma ofertowa dla firm budowlanych</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit dapibus dignissim. 
 Vivamus erat arcu, facilisis quis augue ut, tempor mollis ante. Phasellus id consequat tortor. 
 Sed pulvinar eu augue ut semper. Curabitur condimentum ex vitae lorem dapibus dignissim. Mauris consectetur volutpat feugiat. 
 Donec commodo nisi sit amet augue blandit tincidunt. Proin a tortor at libero vestibulum tempor.
@@ -9,3 +10,4 @@ Morbi malesuada arcu pretium, vestibulum felis sed, varius libero. Lorem ipsum d
 Ut aliquet vulputate leo, non porta quam lacinia vestibulum. Aliquam congue lectus dolor, quis fermentum tortor venenatis nec. 
 Aliquam erat volutpat. 
 Vestibulum lobortis eu tellus quis blandit. Nullam eget felis porta, euismod risus ut, gravida dui.</p>
+</div>
