Gem Devise+Bootstrap

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
     <h1>O firmie</h1>
-    <p>Platforma ofertowa dla firm budowlanych</p>
+    <h3>Platforma ofertowa dla firm budowlanych</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit dapibus dignissim. 
 Vivamus erat arcu, facilisis quis augue ut, tempor mollis ante. Phasellus id consequat tortor. 
 Sed pulvinar eu augue ut semper. Curabitur condimentum ex vitae lorem dapibus dignissim. Mauris consectetur volutpat feugiat. 
