--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -8,10 +8,12 @@
     <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Strona główna', root_path %></li>
         <li><%= link_to 'O firmie', home_about_path %></li>
+        <li><%= link_to 'Lista ofert', offers_path %> </li>
         
         <% if user_signed_in? %>
           <li><%= link_to 'Edycja profilu', edit_user_registration_path %></li>
           <li><%= link_to 'Wylogowanie', destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to 'Nowa oferta', new_offer_path %> </li>
         <% else %>
           <li><%= link_to 'Logowanie', new_user_session_path %></li>
           <li><%= link_to 'Rejestracja', new_user_registration_path %></li>
