--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,8 @@
 <div class="jumbotron">
     <h1>OFFERBUD</h1>
     <p>Platforma ofertowa dla firm budowlanych</p>
-    <p>to jest test</p>
-    <%= link_to 'O firmie', home_about_path, class: 'btn btn-warning' %>
+    <p>Nowe możliwości dla Twojej firmy</p>
     <%= link_to 'Strona główna', root_path, class: 'btn btn-warning' %>
+    <%= link_to 'Lista ofert', offers_path, class: 'btn btn-warning' %>
+    <%= link_to 'Nowa oferta', new_offer_path, class: 'btn btn-warning' %> 
 </div>
