--- a/app/views/offers/edit.html.erb
+++ b/app/views/offers/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Pokaż', @offer %> |
+<%= link_to 'Wyświetl', @offer %> |
 <%= link_to 'Powrót', offers_path %>
