--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Strona główna', root_path %></li>
-        <li><%= link_to 'O firmie', home_about_path %></li>
+        <li><%= link_to 'O nas', home_about_path %></li>
         <li><%= link_to 'Lista ofert', offers_path %> </li>
         
         <% if user_signed_in? %>
