--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,13 +1,14 @@
 <div class="jumbotron">
-    <h1>O firmie</h1>
+    <h1>O nas</h1>
     <h3>Platforma ofertowa dla firm budowlanych</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit dapibus dignissim. 
 Vivamus erat arcu, facilisis quis augue ut, tempor mollis ante. Phasellus id consequat tortor. 
 Sed pulvinar eu augue ut semper. Curabitur condimentum ex vitae lorem dapibus dignissim. Mauris consectetur volutpat feugiat. 
-Donec commodo nisi sit amet augue blandit tincidunt. Proin a tortor at libero vestibulum tempor.
-Morbi condimentum feugiat purus, ut euismod ex sodales eget. Etiam lectus risus, interdum eu tincidunt at, sodales quis felis. 
+Donec commodo nisi sit amet augue blandit tincidunt. Proin a tortor at libero vestibulum tempor.</p>
+
+<p>Morbi condimentum feugiat purus, ut euismod ex sodales eget. Etiam lectus risus, interdum eu tincidunt at, sodales quis felis. 
 Morbi malesuada arcu pretium, vestibulum felis sed, varius libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 Ut aliquet vulputate leo, non porta quam lacinia vestibulum. Aliquam congue lectus dolor, quis fermentum tortor venenatis nec. 
-Aliquam erat volutpat. 
-Vestibulum lobortis eu tellus quis blandit. Nullam eget felis porta, euismod risus ut, gravida dui.</p>
+Aliquam erat volutpat.</p>
+<p>Vestibulum lobortis eu tellus quis blandit. Nullam eget felis porta, euismod risus ut, gravida dui.</p>
 </div>
