--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,5 @@
-<div class="jumbotron">
-    <h1>O nas</h1>
+
+    <div id="log"><h1>O nas</h1></div>
     <h3>Platforma ofertowa dla firm budowlanych</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit dapibus dignissim. 
 Vivamus erat arcu, facilisis quis augue ut, tempor mollis ante. Phasellus id consequat tortor. 
@@ -11,4 +11,3 @@ Morbi malesuada arcu pretium, vestibulum felis sed, varius libero. Lorem ipsum d
 Ut aliquet vulputate leo, non porta quam lacinia vestibulum. Aliquam congue lectus dolor, quis fermentum tortor venenatis nec. 
 Aliquam erat volutpat.</p>
 <p>Vestibulum lobortis eu tellus quis blandit. Nullam eget felis porta, euismod risus ut, gravida dui.</p>
-</div>
