--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Lista ofert</h1>
+<div id="log"><h1>Lista ofert</h1></div>
 
 <table>
   <thead>
@@ -27,3 +27,4 @@
 <br>
 
 <%= link_to 'Nowa oferta', new_offer_path %>
+
