--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+
   <div class="panel-heading"><h2>Rejestracja</h2></div>
     <div class="panel-body">
 
@@ -6,12 +6,12 @@
   <%= devise_error_messages! %>
 
   <div class="form-group">
-    <%= f.label :email %><br />
+    <%= f.label :email %><br/>
     <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= f.label :hasło %>
+    <%= f.label :hasło %><br/>
     <% if @minimum_password_length %>
     <em>(minimum <%= @minimum_password_length %> znaków)</em>
     <% end %><br />
@@ -31,4 +31,3 @@
     </div>
 <div class="panel-footer"><%= render "devise/shared/links" %></div>
 
-</div>
