--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -6,20 +6,25 @@
   
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Strona główna', root_path %></li>
-        <li><%= link_to 'O nas', home_about_path %></li>
-        <li><%= link_to 'Lista ofert', offers_path %> </li>
+        <li><%= link_to 'Strona główna', root_path, class: 'navbar-link' %></li>
+        <li><%= link_to 'O nas', home_about_path, class: 'navbar-link' %></li>
+        <li><%= link_to 'Lista ofert', offers_path, class: 'navbar-link' %> </li>
         
         <% if user_signed_in? %>
-          <li><%= link_to 'Edycja profilu', edit_user_registration_path %></li>
-          <li><%= link_to 'Wylogowanie', destroy_user_session_path, method: :delete %></li>
-          <li><%= link_to 'Nowa oferta', new_offer_path %> </li>
+          <li><%= link_to 'Edycja profilu', edit_user_registration_path, class: 'navbar-link' %></li>
+          <li><%= link_to 'Wylogowanie', destroy_user_session_path, method: :delete, class: 'navbar-link' %></li>
+          <li><%= link_to 'Nowa oferta', new_offer_path, class: 'navbar-link' %> </li>
         <% else %>
-          <li><%= link_to 'Logowanie', new_user_session_path %></li>
-          <li><%= link_to 'Rejestracja', new_user_registration_path %></li>
+          <li><%= link_to 'Logowanie', new_user_session_path, class: 'navbar-link' %></li>
+          <li><%= link_to 'Rejestracja', new_user_registration_path, class: 'navbar-link' %></li>
         <% end %>
         
     </ul>
   </div>
+      <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Szukaj" aria-label="Szukaj">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Szukaj</button>
+    </form>
+  
 </div>
 </nav>
