--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
-<div class="jumbotron">
-    <h1>OFFERBUD</h1>
-    <p>Platforma ofertowa dla firm budowlanych</p>
-    <p>Nowe możliwości dla Twojej firmy</p>
-    <%= link_to 'Strona główna', root_path, class: 'btn btn-warning' %>
+<div class=" center jumbotron">
+    <div id ="log"><h1>OFFERBUD</h1></div>
+    <h2>Platforma ofertowa dla firm budowlanych</h2>
+    <h2>Nowe możliwości dla Twojej firmy</h2>
     <%= link_to 'Lista ofert', offers_path, class: 'btn btn-warning' %>
     <%= link_to 'Nowa oferta', new_offer_path, class: 'btn btn-warning' %> 
+    <%= link_to 'Logowanie', new_user_session_path, class: 'btn btn-warning' %>
 </div>
