--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -21,9 +21,8 @@
         
     </ul>
   </div>
-      <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Szukaj" aria-label="Szukaj">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Szukaj</button>
+    <form class="form-inline my-2 my-lg-0">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><%= link_to "SZUKAJ W GOOGLE", "https://www.google.com/" %></button>
     </form>
   
 </div>
