--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,14 +46,22 @@ body {
 #log {
    color: #000;
    font-family: 'Audiowide', cursive;
+}
 
+#log1 {
+   color: #fff;
+   font-family: 'Audiowide', cursive;
+}
+
+#opis {
+    color: #fff;
 }
 
 .form-group {
     
 }
 
-.form-control {
+.footer {
     
 }
 
