--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <div class="container">
     <div class="navbar-header">
-      <%= link_to 'OFFERBUD', root_path, class: 'navbar-brand' %>
+      <%= link_to 'OFFERBUD', root_path, id: 'logo', class: 'navbar-brand' %>
     </div>
   
   <div class="collapse navbar-collapse" id="navbarNav">
@@ -21,9 +21,6 @@
         
     </ul>
   </div>
-    <form class="form-inline my-2 my-lg-0">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><%= link_to "SZUKAJ W GOOGLE", "https://www.google.com/" %></button>
-    </form>
   
 </div>
 </nav>
