--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,11 @@
-  <div class="panel-heading"><h2>Edycja profilu <%= resource_name.to_s.humanize %></h2></div>
+  <div class="panel-heading"><h2><div id="log">Edycja profilu <%= resource_name.to_s.humanize %></div></h2></div>
     <div class="panel-body">
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :email %><br />
+  <div class="form-row">
+    <%= f.label :email %><br/>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
@@ -13,31 +13,31 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="form-group">
+  <div class="form-row">
     <%= f.label :password, "Hasło" %> <i>(pozostaw puste, jeżeli nie chcesz go zmieniać)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
-      <em>< minimum %= @minimum_password_length %> znaków </em>
+      <em>minimum <%= @minimum_password_length %> znaków </em>
     <% end %>
   </div>
 
-  <div class="form-group">
+  <div class="form-row">
     <%= f.label :password_confirmation, "Powtórz hasło" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+    <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="form-group">
+  <div class="form-row">
     <%= f.label :current_password, "Bieżące hasło" %> <i>(potrzebne do zatwierdzenia zmian)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
+    <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Zmień" %>
+  <div class="actions"></br>
+    <%= f.submit "Zmień", class: 'btn btn-warning' %>
   </div>
 <% end %>
 
-    </div>
+    
 
 <h3>Usuń konto</h3>
 
@@ -45,4 +45,4 @@
 
 <%= link_to "Wstecz", :back %>
 
-
+</div>
