--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,35 @@
 
-  <div class="panel-heading"><h2>Rejestracja</h2></div>
+  <div class="panel-heading"><h2><div id="log">Rejestracja</div></h2></div>
     <div class="panel-body">
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="form-group">
+  <div class="form-row">
     <%= f.label :email %><br/>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="form-group">
+  <div class="form-row">
     <%= f.label :hasło %><br/>
     <% if @minimum_password_length %>
     <em>(minimum <%= @minimum_password_length %> znaków)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+    <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
-  <div class="form-group">
+  <div class="form-row">
     <%= f.label :potwierdź_hasło %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
-  </div>
+    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  </div></br>
 
   <div class="actions">
     <%= f.submit "Wyślij", class: 'btn btn-warning' %>
   </div>
 <% end %>
+</br>
 
-    </div>
+ 
 <div class="panel-footer"><%= render "devise/shared/links" %></div>
 
+</div>
