--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <%= form_tag(offers_path, :method => "get", id: "search-form") do %>
-<%= text_field_tag :search, params[:search], placeholder: "Search Offers" %>
+<%= text_field_tag :search, params[:search], placeholder: "Szukaj oferty" %>
 <%= submit_tag "Szukaj" %>
 <% end %>
 
@@ -13,7 +13,13 @@
 <table>
   <thead>
     <tr>
-      <th>Opis</th>
+      <th>Tytuł oferty</th></ br>
+      <th>Obszar działalności</th></ br>
+      <th>Nazwa Firmy</th></ br>
+      <th>Adres Email</th></ br>
+      <th>Telefon</th></ br>
+      <th>Adres Firmy</th>
+      
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,6 +29,11 @@
       <tr>
   
         <td><%= offer.description %></td>
+        <td><%= offer.place %></td>
+        <td><%= offer.Nazwa_Firmy %></td>
+        <td><%= offer.Email %></td>
+        <td><%= offer.Telefon %></td>
+        <td><%= offer.Adres %></td>
         <td><%= link_to 'Wyświetl', offer %></td>
         <% if offer.user == current_user %>
         <td><%= link_to 'Edytuj', edit_offer_path(offer) %></td>
@@ -33,7 +44,7 @@
   </tbody>
 </table>
 
-<br>
+</br>
 
 <%= link_to 'Nowa oferta', new_offer_path %>
 
