--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <%= image_tag @offer.avatar.url (:medium) %>
   <strong>Tytuł oferty:</strong>
   <%= @offer.description %>
 </p>
@@ -29,6 +30,7 @@
   <strong>Adres Firmy:</strong>
   <%= @offer.Adres %>
 </p>
+
 <% if @offer.user == current_user %>
 <%= link_to 'Edycja', edit_offer_path(@offer) %> 
 <% end %>
