--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,6 +1,42 @@
+<div class="container">
+  <div id="log"><h1>O nas</h1></div>
+  <h2>Platforma ofertowa dla firm budowlanych</h2>  
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
 
-    <div id="log"><h1>O nas</h1></div>
-    <h3>Platforma ofertowa dla firm budowlanych</h3>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <%= image_tag("1a.jpeg", :style => 'border-right: 1px solid #fff;')%>
+      
+    </div>
+
+    <div class="item">
+      <%= image_tag("2.jpg", :style => 'border-right: 1px solid #fff;')%>
+    </div>
+
+    <div class="item">
+      <%= image_tag("3.jpg", :style => 'border-right: 1px solid #fff;')%>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<br>
+  
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent suscipit dapibus dignissim. 
 Vivamus erat arcu, facilisis quis augue ut, tempor mollis ante. Phasellus id consequat tortor. 
 Sed pulvinar eu augue ut semper. Curabitur condimentum ex vitae lorem dapibus dignissim. Mauris consectetur volutpat feugiat. 
@@ -11,3 +47,4 @@ Morbi malesuada arcu pretium, vestibulum felis sed, varius libero. Lorem ipsum d
 Ut aliquet vulputate leo, non porta quam lacinia vestibulum. Aliquam congue lectus dolor, quis fermentum tortor venenatis nec. 
 Aliquam erat volutpat.</p>
 <p>Vestibulum lobortis eu tellus quis blandit. Nullam eget felis porta, euismod risus ut, gravida dui.</p>
+</div>
