--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,3 +12,5 @@
     <%= link_to 'Szukaj w GOOGLE', "https://www.google.com/", class: 'btn btn-primary' %>
  
 </div>
+
+<div class= "fonts">STOPKA</div>
