--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -40,7 +40,8 @@
     <%= f.file_field :avatar %>
   </div>
   
-  <div class="actions">
-    <%= f.submit "Utwórz ofertę" %>
+   <div class="submit">
+    <%= f.submit "Utwórz ofertę", class: 'btn btn-warning' %>
   </div>
+  
 <% end %>
