--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -41,7 +41,8 @@
 
 <h3>Usuń konto</h3>
 
-<p>Nie jesteś zadowolony? <%= button_to "Usuń konto", registration_path(resource_name), data: { confirm: "Jesteś pewien?" }, method: :delete %></p>
+<p>Nie jesteś zadowolony? 
+<%= button_to "Usuń konto", registration_path(resource_name), data: { confirm: "Jesteś pewien?" }, method: :delete %></p>
 
 <%= link_to "Wstecz", :back %>
 
