--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <div class="container">
     <div class="navbar-header">
-      <%= link_to 'OFFERBUD', root_path, id: 'logo', class: 'navbar-brand' %>
+      <%= link_to 'OFFERBUD', root_path, id: 'logo', class: 'badge badge-warning' %>
     </div>
   
   <div class="collapse navbar-collapse" id="navbarNav">
