--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -24,3 +24,14 @@
   
 </div>
 </nav>
+
+<div id = "footer">
+  Copyright &copy; 2018 | Anna Jędrzejek &diams; | Find us on : 
+       
+      <i class="fa fa-google-plus"></i>
+      <%= link_to 'Google+', "https://www.plus.google.com/", class: "badge badge-light" %>
+      <i class="fa fa-facebook"></i>
+      <%= link_to 'Facebook', "https://www.facebook.com/", class: "badge badge-light" %>
+      <i class="fa fa-twitter"></i>
+      <%= link_to 'Twitter', "https://www.twitter.com/", class: "badge badge-light" %>
+</div>
