--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -61,8 +61,15 @@ body {
     
 }
 
-.footer {
-    
+#footer
+{
+        font-family: 'Advent Pro', sans-serif; 
+        position:fixed;
+        text-align:center;
+		bottom:0;
+		width:100%;
+		height:40px;
+		background:#F8F8F8;
 }
 
 @import "bootstrap-sprockets";
